# project-waterman

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  package.json
.github/workflows/: docker-build.yml
.moon/: .dockerignore  toolchain.yml  workspace.yml
.moon/tasks/: rust.yml  typescript.yml
config/: README.md  parameters.yaml
scripts/: install_build.sh
waterman-bridge/: Cargo.toml  Dockerfile  README.md  moon.yml
waterman-bridge/src/: data_gen.rs  http_handler.rs  main.rs  parameters.rs  state.rs  ws_handler.rs
waterman-web/: Dockerfile  README.md  moon.yml  nginx.conf  package.json
waterman-web/src/: App.tsx  constants.ts  index.css  theme.ts
waterman-web/src/components/: ConnectionSettings.tsx  ConnectionStats.tsx  DataTable.tsx  SchemaDisplay.tsx  StatsChart.tsx
waterman-web/src/components/settings/: DataCharacteristicsSettings.tsx  DataVolumeSettings.tsx  InterfaceSettings.tsx  ServerStatus.tsx  SettingsPage.tsx  WebSocketSettings.tsx
waterman-web/src/components/views/: SchemaView.tsx  StatsView.tsx  TableView.tsx
waterman-web/src/hooks/: useArrowWebSocket.ts  useFastMode.tsx  useParameters.ts
waterman-web/src/layout/: AppLayout.tsx  Sidebar.tsx  TopNavbar.tsx
waterman-web/src/types/: parameters.ts
