[package]
name = "waterman-bridge"
version = "0.1.0"
edition = "2024"

[features]
default = []
vendored-openssl = ["openssl-sys/vendored"]

[dependencies]
websocket = "0.27.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3.30"
log = "0.4.22"
pretty_env_logger = "0.5.0"
futures = "0.3.30"
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
clap = { version = "4.5.32", features = ["derive"] }
openssl-sys = { version = "0.9.106", optional = true }
arrow = "54.2.1"
base64 = "0.22.1"
serde_with = "3.12.0"
